--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
         <strong>We're sorry but WhatsMy doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14.2.1/dist/smooth-scroll.polyfills.min.js"></script>
 </body>
 </html>
